--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web 2.0 startup idea generator",
   "main": "index.js",
   "scripts": {
+    "start": "forever index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +24,8 @@
   "homepage": "https://github.com/rxgx/thisforthat#readme",
   "devDependencies": {
     "eslint": "^1.9.0",
-    "eslint-config-xo-space": "^0.6.1"
+    "eslint-config-xo-space": "^0.6.1",
+    "forever": "^0.15.1"
   },
   "eslintConfig": {
     "extend": [
