--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
   },
   "homepage": "https://github.com/rxgx/thisforthat#readme",
   "devDependencies": {
+    "babel-eslint": "^4.1.6",
     "eslint-config-react": "^1.1.1",
     "eslint-config-rxgx": "^1.0.0"
   },
   "eslintConfig": {
-    "extend": [
-      "react",
+    "extends": [
       "rxgx"
-    ]
+    ],
+    "env": {
+      "browser": true,
+      "node": true
+    }
   },
   "dependencies": {
     "bole": "^2.0.0",
