--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "url": "git+https://github.com/rxgx/thisforthat.git"
   },
   "keywords": [
+    "react",
+    "firebase",
     "startup",
     "ideas",
     "pivot"
