--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thisforthat",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Web 2.0 startup idea generator",
   "main": "index.js",
   "scripts": {
@@ -27,7 +27,10 @@
   "devDependencies": {
     "babel-eslint": "^4.1.6",
     "eslint-config-react": "^1.1.1",
-    "eslint-config-rxgx": "^1.0.0"
+    "eslint-config-rxgx": "^1.0.0",
+    "firebase": "^2.4.1",
+    "react": "^0.14.7",
+    "reactfire": "^0.6.0"
   },
   "eslintConfig": {
     "extends": [
