--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "NODE_ENV=development webpack --watch",
-    "webpack": "NODE_ENV=development webpack"
+    "webpack": "webpack"
   },
   "repository": {
     "type": "git",
@@ -30,19 +30,16 @@
     "babel-core": "^6.7.2",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.2",
     "babel-preset-es2015-native-modules": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "eslint": "^2.4.0",
     "eslint-config-rxgx": "^1.0.1",
     "firebase": "^2.4.1",
     "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "reactfire": "^0.6.0",
     "webpack": "^2.1.0-beta.4"
-  },
-  "babel": {
-    "presets": [
-      "es2015-native-modules",
-      "react"
-    ]
   },
   "eslintConfig": {
     "extends": [
@@ -56,8 +53,5 @@
   "dependencies": {
     "bole": "^2.0.0",
     "express": "^4.13.3"
-  },
-  "peerDependencies": {
-    "eslint": "^1.9.0"
   }
 }
