--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "deploy": "git subtree push --prefix public origin gh-pages",
+    "package": "NODE_ENV=production webpack --optimize-minimize",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "NODE_ENV=development webpack --watch",
@@ -28,28 +29,31 @@
   },
   "homepage": "https://github.com/rxgx/thisforthat#readme",
   "devDependencies": {
-    "babel-core": "^6.7.2",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.2",
-    "babel-preset-es2015-native-modules": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "eslint": "^2.4.0",
-    "eslint-config-rxgx": "^1.1.0",
-    "firebase": "^2.4.2",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015-native-modules": "^6.9.3",
+    "babel-preset-es2015-rollup": "^1.2.0",
+    "babel-preset-react": "^6.11.1",
+    "eslint": "^3.3.1",
+    "eslint-config-react": "^1.1.1",
+    "eslint-config-xo-react": "^0.9.0",
+    "eslint-config-xo-space": "^0.14.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-react": "^6.1.1",
+    "firebase": "^2.4.1",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "reactfire": "^1.0.0",
-    "webpack": "^2.1.0-beta.13"
-  },
-  "babel": {
-    "presets": [
-      "es2015-native-modules",
-      "react"
-    ]
+    "rollup": "^0.34.8",
+    "webpack": "^2.1.0-beta.20"
   },
   "eslintConfig": {
     "extends": [
-      "rxgx"
+      "xo-space/esnext",
+      "xo-space",
+      "xo-react"
     ],
     "env": {
       "browser": true,
@@ -58,6 +62,6 @@
   },
   "dependencies": {
     "bole": "^2.0.0",
-    "express": "^4.13.3"
+    "express": "^4.14.0"
   }
 }
