--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015-native-modules": "^6.9.3",
-    "babel-preset-es2015-rollup": "^1.2.0",
+    "babel-preset-babili": "0.0.1",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "eslint": "^3.3.1",
     "eslint-config-react": "^1.1.1",
