--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
   },
   "homepage": "https://github.com/rxgx/thisforthat#readme",
   "devDependencies": {
-    "babel-core": "^6.13.2",
+    "babel": "^6.5.2",
+    "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015-native-modules": "^6.9.3",
-    "babel-preset-es2015-rollup": "^1.2.0",
+    "babel-preset-babili": "0.0.1",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "eslint": "^3.3.1",
     "eslint-config-react": "^1.1.1",
@@ -47,7 +48,7 @@
     "react-dom": "^15.3.0",
     "reactfire": "^1.0.0",
     "rollup": "^0.34.8",
-    "webpack": "^2.1.0-beta.20"
+    "webpack": "^2.1.0-beta.21"
   },
   "eslintConfig": {
     "extends": [
