--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thisforthat",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Web 2.0 startup idea generator",
   "main": "index.js",
   "scripts": {
@@ -49,6 +49,7 @@
     "react-dom": "^15.6.1",
     "reactfire": "^1.0.0",
     "rollup": "^0.34.8",
+    "styled-components": "^2.1.2",
     "webpack": "^3.5.5"
   },
   "eslintConfig": {
