--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
   "name": "thisforthat",
-  "version": "1.3.0",
+  "author": "Ryan Gasparini <ryan@rxgx.com> (http://www.rxgx.com)",
+  "version": "1.4.0",
   "description": "Web 2.0 startup idea generator",
-  "main": "index.js",
-  "scripts": {
-    "deploy": "git subtree push --prefix public origin gh-pages",
-    "lint": "eslint **/*.js",
-    "package": "NODE_ENV=production webpack --optimize-minimize",
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "NODE_ENV=development webpack --watch",
-    "webpack": "webpack"
-  },
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rxgx/thisforthat.git"
@@ -23,68 +15,35 @@
     "ideas",
     "pivot"
   ],
-  "author": "Ryan Gasparini <ryan@rxgx.com> (http://www.rxgx.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/rxgx/thisforthat/issues"
   },
   "homepage": "https://github.com/rxgx/thisforthat#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-minify": "^0.2.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^4.19.1",
-    "eslint-config-prettier": "^2.10.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-prettier": "^2.7.0",
-    "eslint-plugin-react": "^7.11.1",
-    "firebase": "^4.5.0",
-    "prettier": "^1.7.4",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "rollup": "^0.50.0",
-    "styled-components": "^2.2.1",
-    "webpack": "^3.6.0"
+  "dependencies": {
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "react-scripts": "2.1.1"
+  },
+  "scripts": {
+    "deploy": "git subtree push --prefix build origin gh-pages",
+    "lint": "eslint **/*.js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "env": {
-      "browser": true,
-      "es6": true,
-      "node": true
-    },
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier",
-      "react"
-    ],
-    "parser": "babel-eslint",
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-          "singleQuote": true,
-          "bracketSpacing": false,
-          "jsxBracketSameLine": true
-        }
-      ]
-    }
+    "extends": "react-app"
   },
-  "dependencies": {
-    "bole": "^2.0.0",
-    "express": "^4.16.4"
+  "browserslist": [
+    "last 2 chrome versions",
+    "last 2 edge versions",
+    "last 2 firefox versions",
+    "last 2 safari versions"
+  ],
+  "devDependencies": {
+    "firebase": "^5.5.7",
+    "styled-components": "^4.0.3"
   }
 }
