--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "firebase": "^5.5.7",
+    "styled-components": "^4.0.3"
   },
   "scripts": {
     "deploy": "git subtree push --prefix build origin gh-pages",
@@ -41,9 +43,5 @@
     "last 2 edge versions",
     "last 2 firefox versions",
     "last 2 safari versions"
-  ],
-  "devDependencies": {
-    "firebase": "^5.5.7",
-    "styled-components": "^4.0.3"
-  }
+  ]
 }
