--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -18,6 +18,6 @@ jobs:
         version: 10.x
     - name: npm install, build, and test
       run: |
-        npm install --no-progress
-        npm run lint
+        npm ci --no-progress
         npm test
+        npm run build
