--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,5 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install --no-progress
-          npm test
+          CI=true npm test
           npm run build --if-present
