--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Pull Request
 
 on:
-  push:
+  pull_request:
     branches:
       - master
 
@@ -9,15 +9,19 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x, 13.x]
+
     steps:
       - uses: actions/checkout@v1
-      - name: Use Node.js 10.x
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          version: 10.x
-          
+          node-version: ${{ matrix.node-version }}
       - name: npm install, build, and test
         run: |
           npm install --no-progress
-          CI=true npm test
           npm run build --if-present
+          CI=true npm t -- --coverage
