--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -24,4 +24,4 @@ jobs:
         run: |
           npm install --no-progress
           npm run build --if-present
-          CI=true npm t -- --coverage
+          CI=true npm run test
