--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,7 +1,7 @@
-name: Pull Request
+name: Coverage
 
 on:
-  pull_request:
+  push:
     branches:
       - master
 
@@ -23,5 +23,4 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install --no-progress
-          npm run build --if-present
-          CI=true npm run test
+          CI=true npm t -- --runInBand --coverage
