test the coverage workflow

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,3 +24,4 @@ jobs:
         run: |
           npm install --no-progress
           CI=true npm t -- --runInBand --coverage
+          bash <(curl -s https://codecov.io/bash) -t ${{ secrets.CODECOV_TOKEN }}
