--- a/package.json
+++ b/package.json
@@ -21,18 +21,17 @@
   },
   "homepage": "https://github.com/rxgx/thisforthat#readme",
   "dependencies": {
+    "firebase": "7.5.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.3.0",
-    "firebase": "7.5.2",
+    "react-scripts": "^3.3.0",
     "styled-components": "4.4.1"
   },
   "scripts": {
     "deploy": "git subtree push --prefix build origin gh-pages",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "browserslist": [
     "last 2 chrome versions",
