--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "last 2 safari versions"
   ],
   "devDependencies": {
-    "@testing-library/react": "^9.4.0"
+    "@testing-library/react": "^9.4.0",
+    "cypress": "^3.8.1"
   }
 }
