--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,15 +20,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build, and test
-        run: |
-          npm install --no-progress
-          CI=true npm run test
-          npm run build --if-present
-
-  cypress-run:
-    name: Cypress
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cypress.io
+      - name: Install Dependencies
+        run: npm ci
+      - name: Run Jest
+        run: CI=true npm run test
+      - name: Build Assets
+        npm run build --if-present
+      - name: E2E Tests
         uses: cypress-io/github-action@v1.16.1
