--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,11 +20,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install Dependencies
-        run: npm ci
-      - name: Run Jest
-        run: CI=true npm run test
-      - name: Build Assets
-        npm run build --if-present
-      - name: E2E Tests
+      - run: npm ci
+      - run: CI=true npm run test
+      - run: npm run build
+      - run: cy
         uses: cypress-io/github-action@v1.16.1
