--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "styled-components": "4.4.1"
   },
   "scripts": {
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "deploy": "git subtree push --prefix build origin gh-pages",
     "start": "react-scripts start",
     "build": "react-scripts build",
