--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
   ],
   "devDependencies": {
     "@testing-library/react": "^9.4.0",
+    "@types/node": "^13.1.6",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
     "jest": "^24.9.0"
   }
 }
