--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "last 2 safari versions"
   ],
   "devDependencies": {
-    "@testing-library/react": "^10.4.8"
+    "@testing-library/react":  "^10.4.8",
+    "jest": "^24.9.0"
   }
 }
