--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/rxgx/thisforthat#readme",
   "dependencies": {
     "firebase": "7.18.0",
+    "next": "^9.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "^3.4.3",
