--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "@types/node": "^13.1.6",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "identity-obj-proxy": "^3.0.0"
   },
   "scripts": {
     "build": "next build",
