--- a/package.json
+++ b/package.json
@@ -39,10 +39,9 @@
     "identity-obj-proxy": "^3.0.0"
   },
   "scripts": {
-    "build": "next build",
+    "build": "next build && next export",
     "deploy": "git subtree push --prefix build origin gh-pages",
     "dev": "next",
-    "export": "next build && next export",
     "start": "next start",
     "test": "jest"
   }
