--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,6 +22,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm install, build, and test
         run: |
-          npm install --no-progress
-          CI=true npm run test
+          npm ci
+          CI=true npm t --coverage
           npm run build --if-present
