--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "last 2 safari versions"
   ],
   "devDependencies": {
-    "@testing-library/react":  "^10.4.8",
-    "jest": "^24.9.0"
+    "@testing-library/react": "^10.4.8",
+    "jest": "^26.4.0",
+    "identity-obj-proxy": "^3.0.0",
+    "standard": "^14.3.4"
   },
   "standard": {
     "env": "jest"
