--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,16 +12,14 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: ['14']
 
     steps:
       - uses: actions/checkout@v1
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build, and test
-        run: |
-          npm ci
-          CI=true npm t --coverage
-          npm run build --if-present
+      - run: npm install
+      - run: CI=true npm t --coverage
+      - run: npm run build --if-present
