--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
+      - run: npm i -g npm@next-7
       - run: npm install
       - run: CI=true npm t --coverage
       - run: npm run build --if-present
