--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,12 +15,13 @@ jobs:
         node-version: ['14']
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm i -g npm@next-7
       - run: npm install
-      - run: CI=true npm t --coverage
+      - run: npm t --coverage
+        env: CI=true
       - run: npm run build --if-present
