--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm i -g npm@next-7
-      - run: npm install
+      - run: npm ci
       - run: npm t --coverage
         env: CI=true
       - run: npm run build --if-present
