--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -23,5 +23,6 @@ jobs:
       - run: npm i -g npm@next-7
       - run: npm ci
       - run: npm t --coverage
-        env: CI=true
+        env:
+          CI: true
       - run: npm run build --if-present
