--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -24,4 +24,6 @@ jobs:
       - run: npm t --coverage
         env:
           CI: true
-      - run: npm run build  --trace-warnings --if-present
+      - run: npm run build --if-present
+        env:
+          NODE_OPTIONS: '--trace-warnings'
