--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "firebase": "7.18.0",
     "next": "^9.5.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "build": "next build && next export",
