--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,10 +20,10 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm t --coverage
+      - run: |
+          npm ci
+          npm t --coverage
+          npm run build --if-present
         env:
           CI: true
-      - run: npm run build --if-present
-        env:
           NODE_OPTIONS: '--trace-warnings'
