--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['14']
+        node-version: ['12', '14']
 
     steps:
       - uses: actions/checkout@v2
@@ -26,4 +26,5 @@ jobs:
           npm run build --if-present
         env:
           CI: true
+          NODE_ENV: production
           NODE_OPTIONS: '--trace-warnings'
