--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,7 +3,7 @@ name: Coverage
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
@@ -12,12 +12,12 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x]
+        node-version: ['12', '14']
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
       - name: npm install, build, and test
