updates for build

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -23,7 +23,7 @@ jobs:
       - run: |
           npm ci
           npm t --coverage
-          npm run build --if-present
+          npm run build
         env:
           CI: true
           NODE_OPTIONS: '--trace-warnings'
