--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "firebase": "7.19.1",
     "next": "^9.5.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react": "^17.0.0-rc.0",
+    "react-dom": "^17.0.0-rc.0"
   },
   "scripts": {
     "build": "next build && next export",
@@ -36,8 +36,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "^11.0.2",
-    "jest": "^26.4.2",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.4.2",
     "standard": "^14.3.4"
   },
   "standard": {
