--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "dependencies": {
     "firebase": "7.19.1",
     "next": "^9.5.3",
-    "react": "^17.0.0-rc.1",
-    "react-dom": "^17.0.0-rc.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "build": "next build && next export",
