--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "keywords": [
     "react",
     "firebase",
-    "startup",
-    "ideas",
-    "pivot"
+    "css",
+    "html",
+    "nextjs"
   ],
   "license": "MIT",
   "bugs": {
