--- a/package.json
+++ b/package.json
@@ -34,15 +34,16 @@
     "test": "standard && jest --coverage"
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.6",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.7",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
+    "jest": "^27.0.3",
     "standard": "^16.0.3"
   },
   "standard": {
     "env": "jest"
   },
   "volta": {
-    "node": "14.11.0"
+    "node": "16.2.0"
   }
 }
