--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "eslint-config-next": "12.2.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "standard": "^16.0.4"
