--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "@testing-library/react": "^13.3.0",
     "eslint-config-next": "12.2.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.2",
+    "jest-environment-jsdom": "^28.1.2",
     "standard": "^16.0.4"
   },
   "standard": {
