--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "eslint-config-next": "12.2.4",
+    "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react": "^1.1.7",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.0.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "next": "^12.3.1"
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "next": "^13.0.0"
   },
   "volta": {
     "node": "16.16.0"
