--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,3 +27,5 @@ jobs:
         env:
           CI: true
           NODE_OPTIONS: '--trace-warnings'
+      - name: Infracost Actions
+        uses: infracost/actions@v2.0.0
