--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
   },
   "homepage": "https://github.com/rxgx/chopped#readme",
   "dependencies": {
-    "firebase": "^12.0.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "firebase": "^12.0.0"
   },
   "scripts": {
     "build": "next build",
@@ -34,7 +32,7 @@
     "test": "jest --coverage"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "eslint-config-next": "^15.4.1",
     "eslint-config-prettier": "^10.1.1",
@@ -42,9 +40,11 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "next": "^15.3.5"
+    "next": "^15.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "volta": {
-    "node": "22.21.0"
+    "node": "24.10.0"
   }
 }
