--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['24']
+        node-version: ['20', '24']
 
     steps:
       - uses: actions/checkout@v5
